@@ -1,3 +1,11 @@
+ScriptEngine-HPC 0.x.y
+======================
+
+Features
+--------
+- Add stop_after_submit argument to hpc.slurm.sbatch
+
+
 ScriptEngine-HPC 0.4.1
 ======================
 
